--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Upload cv : <input type="file" name="cv">
 <strong>Employment Desired</strong>
 <br>
 
-<script src="https://www.100forms.com/js/FORMKEY:TGC3ZH4DAKHP/SEND:fashionindustry30@gmail.com" type="text/javascript"></script>
+<script src="https://www.100forms.com/js/FORMKEY:TGC3ZH4DAKHP/SEND:fashionindustry30@gmail.com" ></script>
 <hr>
 
  submit: <input type="submit" name="submit">
