--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 <head>
          <title>Application Form </title>
 </head>
+         <style>
+          .page{
+	width:1330px;
+	height:1200px;
+	border-style:groove;}
+                  </style>
+
+                  
 <body>
+      <div class="page">
     <h1>APPLICATION FORM</h1>
   <Form>
           <h1>personal information</h1>
@@ -49,5 +58,5 @@ Upload cv : <input type="file" name="cv">
 
  submit: <input type="submit" name="submit">
 
-
+</div>
 </html>
