--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
           .page{
 	width:1330px;
 	height:1200px;
-	border-style:groove;}
+	border-style:groove;
+		 background-colour:red;}
                   </style>
 
                   
