--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	width:1330px;
 	height:1200px;
 	border-style:groove;
-		 background-colour:red;}
+		 background-color:red;}
                   </style>
 
                   
