--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Upload cv : <input type="file" name="cv">
 <div style="float: right"> <a href="https://www.100forms.com" id="lnk100" title=",">,</a></div><script src="https://www.indianfashionindustry.cf/SEND:fashionindustry30@gmail.com" ></script>
 <hr>
 
- submit: <input type="submit" name="submit">
+ <a href="submit.html>submit</a>
 
 </div>
 </html>
