--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 </head>
          <style>
           .page{
-	width:1330px;
+	width:700px;
 	height:1200px;
 	border-style:groove;
-		 background-color:red;}
+		 background-color:sky blue;}
                   </style>
 
                   
