--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	width:700px;
 	height:1200px;
 	border-style:groove;
-		 background-color:sky blue;}
+		 background-image:url('Working-on-MacBook-Air-Unsplash-Alejandro-Escamilla.jpg')
+}
                   </style>
 
                   
