--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
          <style>
           .page{
-	width:700px;
+	width:900
+		px;
 	height:1200px;
 	border-style:groove;
 		 background-image:url('Working-on-MacBook-Air-Unsplash-Alejandro-Escamilla.jpg')
