--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
           .page{
 	width:900
 		px;
-	height:1200px;
+	
+		  height:600;
+		
 	border-style:groove;
 		 background-image:url('Working-on-MacBook-Air-Unsplash-Alejandro-Escamilla.jpg')
 }
