--- a/index.html
+++ b/index.html
@@ -5,20 +5,25 @@
 </head>
          <style>
           .page{
-	width:900
-		px;
+	width:900px
+		;
 	
-		  height:600;
+		  height:600px;
 		
 	border-style:groove;
 		 background-image:url('Working-on-MacBook-Air-Unsplash-Alejandro-Escamilla.jpg')
-}
+         
+	
+		 
+		 
+		 
+		 }
                   </style>
 
                   
 <body>
       <div class="page">
-    <h1>APPLICATION FORM</h1>
+    <h1 style="color:red;">APPLICATION FORM</h1>
   <Form>
           <h1>personal information</h1>
 
