--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                   
 <body>
       <div class="page">
+	      <center>
     <h1 style="color:red;">APPLICATION FORM</h1>
   <Form>
           <h1>personal information</h1>
@@ -67,6 +68,6 @@ Upload cv : <input type="file" name="cv">
 <hr>
 
  <a href="submit.html>submit</a>
-
+</center>
 </div>
 </html>
